Opened 13 years ago

Closed 13 years ago

Last modified 12 years ago

#3215 closed defect (fixed)

remuxed cvid gray8 have wrong colors

Reported by: ami_stuff Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: mov
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by ami_stuff)

bits_per_coded_sample should be set to 0x28 instead of 0x8 (problem similar to ticket #1994)

C:\>ffmpeg -i QT-QDesign2.mov -an -vcodec copy out.mov
ffmpeg version N-58797-g4a0d827 Copyright (c) 2000-2013 the FFmpeg developers
  built on Dec  6 2013 02:21:57 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavp
ack --enable-libx264 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      52. 56.100 / 52. 56.100
  libavcodec     55. 45.100 / 55. 45.100
  libavformat    55. 22.100 / 55. 22.100
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     3. 91.100 /  3. 91.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'QT-QDesign2.mov':
  Metadata:
    creation_time   : 2002-10-03 18:58:49
  Duration: 00:00:05.96, start: 0.000000, bitrate: 898 kb/s
    Stream #0:0(eng): Audio: qdm2 (QDM2 / 0x324D4451), 11025 Hz, mono, s16, 24 k
b/s (default)
    Metadata:
      creation_time   : 2002-10-03 18:58:49
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Video: cinepak (cvid / 0x64697663), pal8, 192x128, 872 kb/
s, 24 fps, 24 tbr, 1000k tbn, 1000k tbc (default)
    Metadata:
      creation_time   : 2002-10-03 18:58:49
      handler_name    : Apple Alias Data Handler
[mov @ 02ae7540] WARNING codec timebase is very high. If duration is too long,
file may not be playable by quicktime. Specify a shorter timebase
or choose different container.
Output #0, mov, to 'out.mov':
  Metadata:
    encoder         : Lavf55.22.100
    Stream #0:0(eng): Video: cinepak (cvid / 0x64697663), pal8, 192x128, q=2-31,
 872 kb/s, 24 fps, 1000k tbn, 1000k tbc (default)
    Metadata:
      creation_time   : 2002-10-03 18:58:49
      handler_name    : Apple Alias Data Handler
Stream mapping:
  Stream #0:1 -> #0:0 (copy)
Press [q] to stop, [?] for help
frame=  143 fps=0.0 q=-1.0 Lsize=     636kB time=00:00:05.91 bitrate= 880.6kbits
/s
video:636kB audio:0kB subtitle:0 global headers:0kB muxing overhead 0.039783%

Attachments (1)

QT-QDesign2.mov (653.7 KB ) - added by ami_stuff 13 years ago.

Download all attachments as: .zip

Change History (6)

by ami_stuff, 13 years ago

Attachment: QT-QDesign2.mov added

comment:1 by ami_stuff, 13 years ago

Description: modified (diff)

comment:2 by Carl Eugen Hoyos, 13 years ago

Keywords: mov added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Removing the line "st->codec->bits_per_coded_sample = color_depth;" in libavformat/mov.c fixes the issue here.

comment:3 by Carl Eugen Hoyos, 13 years ago

Fixed in 691dec62 - thank you for the report!

comment:4 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavformat
Resolution: fixed
Status: openclosed

comment:5 by Carl Eugen Hoyos, 12 years ago

This was actually already fixed in d63e9943

Note: See TracTickets for help on using tickets.