libavcodec/msrle.c
@@ -54,7 +54,7 @@ static av_cold int msrle_decode_init(AVCodecContext *avctx)
 
     s->avctx = avctx;
 
-    switch (avctx->bits_per_coded_sample) {
+    switch (avctx->bits_per_coded_sample & 0x1f) {
     case 1:
         avctx->pix_fmt = AV_PIX_FMT_MONOWHITE;
         break;
